<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".Principal">

	<ImageView
		android:id="@+id/imageView2"
		android:layout_width="129dp"
		android:layout_height="116dp"
		android:layout_marginTop="16dp"
		android:background="@android:color/background_light"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:srcCompat="@drawable/ic_account_circle"/>

	<TextView
		android:id="@+id/tvUserName"
		android:layout_width="wrap_content"
		android:layout_height="23dp"
		android:layout_marginTop="8dp"
		android:fontFamily="sans-serif"
		android:lineSpacingExtra="10sp"
		android:text="@string/userName"
		android:textAlignment="center"
		android:textColor="@android:color/background_dark"
		android:textSize="18sp"
		android:typeface="normal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/imageView2"/>

	<ScrollView
		android:id="@+id/scrollView2"
		android:layout_width="363dp"
		android:layout_height="272dp"
		android:layout_marginEnd="8dp"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/tvUserName">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<Button
				android:id="@+id/bViajeNuevo"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:text="@string/nuevoViaje"
				app:layout_constraintEnd_toEndOf="@+id/scrollView2"
				app:layout_constraintHorizontal_bias="0.514"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="@+id/scrollView2"/>

			<Button
				android:id="@+id/bCupones"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:text="@string/cupones"
				tools:layout_editor_absoluteX="19dp"
				tools:layout_editor_absoluteY="222dp"/>

			<Button
				android:id="@+id/bEntretenimiento"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:text="@string/entretenimiento"/>

			<Button
				android:id="@+id/binformacion"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:text="@string/informacion"/>

			<Button
				android:id="@+id/bcontacto"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/contacto"/>

		</LinearLayout>
	</ScrollView>

	<com.google.android.gms.ads.AdView
		android:id="@+id/adView"
		android:layout_width="361dp"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/scrollView2"
		ads:adSize="BANNER"
		ads:adUnitId="MyAdUnitId"/>

</android.support.constraint.ConstraintLayout>